@@ -7,8 +7,8 @@ _wajig()
     cur=${COMP_WORDS[COMP_CWORD]}
 
     options="-b --backup -d --dist -f --fast -h --help -n --noauth \
-             -s --simulate -t --teaching -v --verbose \
-             -r --recommends -R --norecommends -y --yes -V --version"
+             -r --recommends -R --norecommends -v --verbose \
+             -y --yes -V --version"
 
     commands="addcdrom addrepo auto-alts auto-clean auto-download \
               autoremove available bug build build-depend changelog clean \
